Fix alignment

--- a/src/plone/app/theming/browser/resources/mapper.css
+++ b/src/plone/app/theming/browser/resources/mapper.css
@@ -115,7 +115,7 @@
     display: inline-block;
     line-height: 12px;
     padding: 0 0 0 18px;
-    margin: 5px 0 0 2px;
+    margin: 4px 0 0 2px;
     background-image: url('./full.png');
     background-repeat: no-repeat;
     text-decoration: none;
